# home-automation-appdaemon

./: AGENTS.md  README.md  appdaemon.yaml  pyproject.toml
apps/: apps.yaml  common.py  notify.py
apps/house/: apps.yaml  arrival_notifier.py  buttons.py  left_on_notifier.py  low_battery_notifier.py  occupancy.py  outside_lights.py  security.py  vacation_lights.py  vacation_mode.py  welcome_home.py
apps/kitchen/: apps.yaml  kitchen_light.py
apps/main_room/: apps.yaml  closet_light.py
